--- a/README
+++ b/README
@@ -11,6 +11,6 @@ ns-2.34_top-0.1.diff - patches for original to simulate top
 ns-2.34_tailender-0.1.diff - patches for original to simulate tailender
 
 
-For more information please read our paper: Leveraging the Wasted Time for Saving Energy in Cellular Networks.
+For more information please read our paper in IEEE TMC: Leveraging the Tail Time for Saving Energy in Cellular Networks (http://ieeexplore.ieee.org/document/6619384).
 
 For questions and more detail information, please contact dizhang.thu@gmail.com.
